# pytagoras-agent-plugins

./: .gitignore  README.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
plugins/book-latex/skills/book-latex/: SKILL.md
plugins/book-latex/skills/book-latex/cli/windows/: book_cli.py  compile_latex.py  init_book.py  init_latex.py  pyproject.toml
plugins/book-latex/skills/book-latex/commands/: delete-appendix.md  delete-chapter.md  delete-part.md  delete-section.md  insert-appendix.md  insert-chapter.md  insert-part.md  insert-section.md  move-chapter.md  move-section.md  new-appendix.md  new-chapter.md  new-part.md  new-section.md  rename-appendix.md  rename-chapter.md  rename-part.md  rename-section.md  swap-chapters.md  swap-part.md  swap-sections.md
plugins/book-latex/skills/book-latex/docs/images/: image-prompts.md
plugins/book-latex/skills/book-latex/docs/latex/: latex-code-style.md
plugins/book-latex/skills/book-latex/docs/structure/: book-structure-guide.md  subfile.md
plugins/statusline/: settings.example.json  statusline.py
plugins/statusline/.claude-plugin/: plugin.json
